--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 /* Estilo general para el cuerpo del documento */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #F8F4E1;
     margin: 0;
     padding: 0;
 }
